--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 flask>=2.2.2
 flask-restful>=0.3.9
 Flask-Cors==3.0.10
-Flask-JWT==0.3.2
-Flask-JWT-Extended==4.4.4
 passlib==1.7.4
 mysql-connector-python==8.0.33
+flask_sqlalchemy=3.0.3
+pymysql=1.0.3
+Flask-JWT-Extended==4.4.4
